[package]
name = "huh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Args
clap = { version = "4.1.4", features = ["derive"] }
# Base 64
base64 = "0.21.0"
# URL parsing
url = "2.3.1"
# Regex
regex = "1"
# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
# Hashes
sha2 = "0.10"
